2006-11-23  Thomas Heller  <theller@python.net>

	* Fixed a bug in the codegenerator with unsized arrays.
	Thanks to Danielle Varrazzo for the report.

2006-11-17  Thomas Heller  <theller@python.net>

	* In ctypeslib.test, add a byref_offset module that contains a
	byref_offset function; with tests.

	Experimental code, currently.
	
2006-11-14  Thomas Heller  <theller@python.net>

	* Added ctypeslib.contrib package which contains contributed code
	that does not yet fit elsewehere.  ctypeslib.contrib.get_exports,
	contributed by leppton, lists the exports in a dll.

2006-11-10  Thomas Heller  <theller@python.net>

	* ctypeslib/h2xml.py: Refactored a function compile_to_xml() out
	of main(), CompilerErrors are catched in main() but not in
	compile_to_xml().

	Added test that an exception is raised in
	dynamic_module.include() when a CompilerError occurs.

	* ctypeslib/codegen/cparser.py: No configuration file
	"~/ctypes_codegen/cparser.cfg" is used (or needed) anymore.

2006-11-09  Thomas Heller  <theller@python.net>

	* Inmplemented this change in a different way again.

	* Reverted this change because it does not (yet) work:

	* ctypeslib/codegen/cparser.py: The final xml-file is now created
	before searching for preprocessor definitions (if no output file
	is requested it will be deleted afterwards).  The advantage is
	that compilation errors are detected early and don't disturb the
	cpp magic.

2006-11-08  Thomas Heller  <theller@python.net>

	* ctypeslib\dynamic_module.y: Generate the .h, .xml, and
	.typedesc.bz2 files in a temporary directory.  Should that
	directory contain the GCCXML version number? Or the ctypeslib
	version number?

2006-11-07  Thomas Heller  <theller@python.net>

	* ctypeslib\codegen\gccxmlparser.py: Patch from Giovanni Bajo: Use
	cElementtree, if installed, instead of xml.sax for XML parsing.
	This gives a significant speedup.

2006-11-03  Thomas Heller  <theller@python.net>
